syntax = "proto3";

package io.github.j5ik2o.pcqrses.command.interfaceAdapter.persistence.basic;

message UserAccountName {
  string first_name = 1;
  string last_name = 2;
}
